--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,20 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}QS LEAP{% endblock %}</title>
+			<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+			<meta name="MobileOptimized" content="width" />
+			<meta name="HandheldFriendly" content="true" />
+			<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+			{% block stylesheets %}{% endblock %}
+			
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+			{% block navbar %}
+				{% include "shared/_primary_nav_bar.html.twig" %}
+			{% endblock navbar %}
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
