Adding yarn to project

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}QS LEAP{% endblock %}</title>
+        <title>{% block title %}Edcare{% endblock %}</title>
 			<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 			<meta name="MobileOptimized" content="width" />
 			<meta name="HandheldFriendly" content="true" />
@@ -13,7 +13,6 @@
     <body>
         {% block body %}
 			{% block navbar %}
-				{% include "shared/_primary_nav_bar.html.twig" %}
 			{% endblock navbar %}
         {% endblock %}
         {% block javascripts %}{% endblock %}
